# spark-milvus

./: .gitignore  .sbtopts  .scalafmt.conf  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  LICENSE  MAINTAINERS  Makefile  OWNERS_ALIASES  README.md  build.sbt  conanfile.py
.github/workflows/: main.yml
docs/: reference-cn.md  reference-en.md
project/: Dependencies.scala  plugins.sbt
scripts/: backfill_demo.py  create_snapshot.py  generate_jni_header.sh  run_backfill_demo.sh
src/main/c/include/: com_zilliz_spark_connector_jni_MilvusStorageJNI.h
src/main/c/native/: milvus_storage_jni.cpp
src/main/scala/: DataTypeUtil.scala  Exception.scala  MilvusClient.scala  MilvusDataReader.scala  MilvusOption.scala  MilvusUtil.scala
src/main/scala/binlog/: ByteArrayInputFile.scala  LogObject.scala  LogReader.scala  MilvusBinlogDataSource.scala  ParquetReader.scala
src/main/scala/expressions/: VectorExpressions.scala
src/main/scala/extensions/: VectorSearchExtensions.scala
src/main/scala/filter/: VectorBruteForceSearch.scala
src/main/scala/jni/: MilvusStorageJNI.scala
src/main/scala/read/: MilvusInputPartition.scala  MilvusLoonPartitionReader.scala  MilvusPartitionReader.scala  MilvusPartitionReaderFactory.scala  MilvusSnapshotReader.scala
src/main/scala/serde/: ArrowConverter.scala  SchemaUtil.scala
src/main/scala/sources/: MilvusDataReader.scala  MilvusDataSource.scala  MilvusDataWriter.scala  MilvusInsertDataWriter.scala  MilvusSparkNativeImportWriter.scala
src/main/scala/write/: MilvusBatchWriter.scala  MilvusDataWriterFactory.scala  MilvusInsertDataWriter.scala  MilvusLoonWriter.scala  MilvusWriteBuilder.scala
src/test/data/: sample_snapshot.json
src/test/scala/example/: HelloSpec.scala
src/test/scala/loon/: MilvusStorageFFITest.scala
src/test/scala/read/: MilvusSnapshotReaderTest.scala
src/test/scala/sources/: MilvusDataSourceTest.scala
(+5 files in other folders)
